tests/invalid/require_tailrec_3.err_exp3
require_tailrec_3.m:038: In mode number 1 of function `even1'/1:
require_tailrec_3.m:038:   warning: mutually recursive call to function
require_tailrec_3.m:038:   `odd1'/1 is not tail recursive.
require_tailrec_3.m:044: In mode number 1 of function `odd1'/1:
require_tailrec_3.m:044:   warning: mutually recursive call to function
require_tailrec_3.m:044:   `even1'/1 is not tail recursive.
require_tailrec_3.m:053: In mode number 1 of function `even2'/1:
require_tailrec_3.m:053:   error: mutually recursive call to function `odd2'/1
require_tailrec_3.m:053:   is not tail recursive.
require_tailrec_3.m:059: In mode number 1 of function `odd2'/1:
require_tailrec_3.m:059:   warning: mutually recursive call to function
require_tailrec_3.m:059:   `even2'/1 is not tail recursive.
require_tailrec_3.m:068: In mode number 1 of function `even3'/1:
require_tailrec_3.m:068:   warning: mutually recursive call to function
require_tailrec_3.m:068:   `odd3'/1 is not tail recursive.
require_tailrec_3.m:074: In mode number 1 of function `odd3'/1:
require_tailrec_3.m:074:   warning: mutually recursive call to function
require_tailrec_3.m:074:   `even3'/1 is not tail recursive.
